# pillar-rs

./: .gitignore  .pre-commit-config.yaml  .repomixignore  .rustfmt.toml  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  Taskfile.yml  cliff.toml  rust-toolchain.toml  yek.yaml
.devcontainer/: Dockerfile  devcontainer.json
.github/: pull_request_template.md
.github/workflows/: default.yml  release.yml  stable.yml
.taskfile/: rust.yml  utils.yml  version.yml
crates/pillar/: Cargo.toml
crates/pillar-clickhouse/: Cargo.toml  README.md
crates/pillar-clickhouse/src/: database.rs  dialect.rs  lib.rs  normalize.rs  transpile.rs
crates/pillar-core/: Cargo.toml  README.md
crates/pillar-core/src/: ast.rs  column.rs  condition.rs  convert.rs  database.rs  dialect.rs  errors.rs  lib.rs  migration.rs  model.rs  query.rs  traits.rs  value.rs  view.rs
crates/pillar-core/src/ast/: compound.rs  duration.rs  expression.rs  mod.rs  mutation.rs  refs.rs  schema.rs  select.rs  table.rs  ttl.rs  window.rs
crates/pillar-core/src/migration/: graph.rs  mod.rs  traits.rs
crates/pillar-core/src/query/: delete.rs  entity.rs  insert.rs  mod.rs  select.rs  update.rs  view.rs
crates/pillar-core/src/types/: execution.rs  mod.rs  query.rs
crates/pillar-duckdb/: Cargo.toml  README.md
crates/pillar-duckdb/src/: database.rs  dialect.rs  lib.rs  normalize.rs  transpile.rs  value.rs
crates/pillar-macros/: Cargo.toml  README.md
crates/pillar-macros/src/: attr.rs  codegen.rs  column.rs  condition.rs  from_batch.rs  lib.rs  model.rs  to_row.rs  view.rs
crates/pillar/src/: lib.rs  prelude.rs
