[package]
name = "pillar-duckdb"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
pillar-core = { path = "../pillar-core", version = "0.2.2" }

thiserror = { workspace = true }
async-trait = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

arrow = { workspace = true }
futures = { workspace = true }

duckdb = { version = "1.10502.0", features = ["vtab-arrow"] }
blocking = { version = "1.6" }

chrono = { workspace = true, optional = true }

[features]
default = []
bundled = ["duckdb/bundled"]
chrono = ["pillar-core/chrono", "dep:chrono"]
uuid = ["pillar-core/uuid"]
