[package]
name = "pillar"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
pillar-macros = { path = "../pillar-macros", version = "0.0.0" }
pillar-core = { path = "../pillar-core", version = "0.0.0" }

async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[features]
default = []