[package]
name = "pillar"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
pillar-macros = { path = "../pillar-macros", version = "0.3.3" }
pillar-core = { path = "../pillar-core", version = "0.3.3", default-features = false }
pillar-duckdb = { path = "../pillar-duckdb", version = "0.3.3", default-features = false, optional = true }
pillar-clickhouse = { path = "../pillar-clickhouse", version = "0.3.3", default-features = false, optional = true }

async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[features]
default = []
chrono = ["pillar-core/chrono", "pillar-duckdb/chrono", "pillar-clickhouse/chrono"]
uuid = ["pillar-core/uuid", "pillar-duckdb/uuid", "pillar-clickhouse/uuid"]
duckdb = ["dep:pillar-duckdb"]
duckdb-bundled = ["duckdb", "pillar-duckdb/bundled"]
clickhouse = ["dep:pillar-clickhouse"]
